force-app/main/default/objects/AB4CD__ListView__c/AB4CD__ListView__c.object-meta.xml
<CustomObject>
    <label>List View</label>
    <nameField>
        <label>ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>