force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Email__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Email__c</fullName>
    <description>Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>