force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Filters__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Filters__c</fullName>
    <label>Filters</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>