force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Object__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Object__c</fullName>
    <description>Object</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>