force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Ownership__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Ownership__c</fullName>
    <label>Ownership</label>
    <length>10</length>
    <type>Text</type>
</CustomField>