force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Queue__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Queue__c</fullName>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>