force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__Visibility__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Visibility__c</fullName>
    <description>Visibility</description>
    <label>Visibility</label>
    <length>10</length>
    <type>Text</type>
</CustomField>