force-app/main/default/objects/AB4CD__ListView__c/fields/AB4CD__WhereClause__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__WhereClause__c</fullName>
    <description>Where Clause</description>
    <label>Where Clause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>